fixed clarification z-index

--- a/src/css/frame/clarification.css
+++ b/src/css/frame/clarification.css
@@ -204,3 +204,11 @@
 .noj-frame#frameClarification .noj-clarification-layout > div:first-of-type{
     background-image: linear-gradient(to top, rgba(196, 197, 199, 0.5) 0%, rgba(220, 221, 223, 0.5) 52%, rgba(235, 235, 235, 0.5) 100%);
 }
+
+.noj-frame#frameClarification .noj-alert-container{
+    position: absolute;
+    top:0;
+    bottom:0;
+    right:0;
+    left:0;
+}
